<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/dummy_thumbnail"
            android:contentDescription="@string/desc_movie_thumbnail" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:background="#75000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24" />

        <TextView
            android:id="@+id/tvAdult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_adult"
            android:background="#17606060"
            android:paddingHorizontal="16dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:layout_margin="@dimen/dimen_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgThumbnail"
            style="@style/TextContent.Title"/>

        <TextView
            android:id="@+id/tvRating"
            tools:text="7.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#17606060"
            android:paddingHorizontal="16dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:layout_margin="@dimen/dimen_16dp"
            android:drawablePadding="@dimen/dimen_8dp"
            app:layout_constraintStart_toEndOf="@id/tvAdult"
            app:layout_constraintTop_toBottomOf="@+id/imgThumbnail"
            style="@style/TextContent.Title"
            app:drawableStartCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/tvMovieTitle"
            style="@style/TextContent.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRating"
            tools:text="Avenger: Endgame" />

        <TextView
            android:id="@+id/tvOverview"
            style="@style/TextContent.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
            tools:text="Avenger: Endgame" />

        <TextView
            android:id="@+id/tvCast"
            style="@style/TextContent.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview"
            android:text="@string/label_cast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_cast"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCast" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCast">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/cast_layout_shimmer" />

                <include layout="@layout/cast_layout_shimmer" />

                <include layout="@layout/cast_layout_shimmer" />

                <include layout="@layout/cast_layout_shimmer" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightRed"
            app:tint="@color/white"
            android:src="@drawable/ic_favorite_border"
            android:layout_marginEnd="@dimen/dimen_16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgThumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgThumbnail"
            android:contentDescription="@string/desc_btn_add_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>